--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lauren Hetherington</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Pacifico|Raleway:500,700|Satisfy|Titillium+Web:400,400i&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -32,144 +35,156 @@
     </header>
     <main>
         <section class="about">
-            <h2>About me</h2>
-            <div class="fancyLine"></div>
-            <div class="profilePhoto">
-                <img src="https://placekitten.com/100/100" alt="">
-            </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptatum libero rem doloribus, voluptas ratione velit molestiae voluptatem, beatae neque vitae architecto blanditiis maxime. Voluptatum minus iste debitis ducimus omnis.</p>
-            <div class="socialLinks">
-                t f i g l
+            <div class="wrapper">
+                <h2>About me</h2>
+                <div class="fancyLine"></div>
+                <div class="profilePhoto">
+                    <img src="https://placekitten.com/100/100" alt="">
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptatum libero rem doloribus, voluptas ratione velit molestiae voluptatem, beatae neque vitae architecto blanditiis maxime. Voluptatum minus iste debitis ducimus omnis.</p>
+                <div class="socialLinks">
+                    t f i g l
+                </div>
             </div>
         </section>
         <section class="skills">
-            <ul>
-                <li>
-                    <div>i</div>
-                    <p>Amazing Websites</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </li>
-                <li>
-                    <div>i</div>
-                    <p>Quality Websites</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                </li>
-                <li>
-                    <div>i</div>
-                    <p>Creative Websites</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="portfolio">
-            <h2>Portfolio</h2>
-            <div class="fancyLine"></div>
-            <ul>
-                <li>
-                    <p>All</p>
-                </li>
-                <li>
-                    <p>Catagory</p>
-                </li>
-                <li>
-                    <p>Catagory</p>
-                </li>
-                <li>
-                    <p>Catagory</p>
-                </li>
-            </ul>
-            <ul class="items">
-                <li class="itemContainer">
-                    <div class="overlay">
-                        <h3>Item</h3>
-                        <p>Look</p>
-                    </div>
-                    <img src="https://placekitten.com/100/100" alt="">
-                </li>
-                <li class="itemContainer">
-                    <div class="overlay">
-                        <h3>Item</h3>
-                        <p>Look</p>
-                    </div>
-                    <img src="https://placekitten.com/100/100" alt="">
-                </li>
-                <li class="itemContainer">
-                    <div class="overlay">
-                        <h3>Item</h3>
-                        <p>Look</p>
-                    </div>
-                    <img src="https://placekitten.com/100/100" alt="">
-                </li>
-                <li class="itemContainer">
-                    <div class="overlay">
-                        <h3>Item</h3>
-                        <p>Look</p>
-                    </div>
-                    <img src="https://placekitten.com/100/100" alt="">
-                </li>
-                <li class="itemContainer">
-                    <div class="overlay">
-                        <h3>Item</h3>
-                        <p>Look</p>
-                    </div>
-                    <img src="https://placekitten.com/100/100" alt="">
-                </li>
-                <li class="itemContainer">
-                    <div class="overlay">
-                        <h3>Item</h3>
-                        <p>Look</p>
-                    </div>
-                    <img src="https://placekitten.com/100/100" alt="">
-                </li>
-            </ul>
-            <a href="#" class="button">View more</a>
-        </section>
-        <section class="testimonials">
-            <h2>Testimonials</h2>
-            <div class="fancyLine"></div>
-            <div class="profilePhoto">
-                <img src="https://placekitten.com/100/100" alt="">
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aliquid eum fugiat facere cum, neque hic rem error omnis deleniti, quisquam aut fugit eligendi magnam consequatur, praesentium quis et id!</p>
-            <p>. . .</p>
-        </section>
-        <section class="contact">
-            <h2>Get in touch</h2>
-            <div class="fancyLine"></div>
-            <div class="flexContainer">
-                <ul class="contact">
+            <div class="wrapper">
+                <ul>
                     <li>
-                        <h3>See me</h3>
-                        <p>sdfgjdsfh
-                        </p>
+                        <div>i</div>
+                        <p>Amazing Websites</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                     </li>
                     <li>
-                        <h3>Call me</h3>
-                        <p>34534563456</p>
+                        <div>i</div>
+                        <p>Quality Websites</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
                     </li>
                     <li>
-                        <h3>Write me</h3>
-                        <p>kgkjh@kghgk.dfg</p>
+                        <div>i</div>
+                        <p>Creative Websites</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                     </li>
                 </ul>
-                <form action="#">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" cols="30" rows="10">Message...</textarea>
-                    <button type="submit">Send</button>
-                </form>
+            </div>
+        </section>
+        <section class="portfolio">
+            <div class="wrapper">
+                <h2>Portfolio</h2>
+                <div class="fancyLine"></div>
+                <ul>
+                    <li>
+                        <p>All</p>
+                    </li>
+                    <li>
+                        <p>Catagory</p>
+                    </li>
+                    <li>
+                        <p>Catagory</p>
+                    </li>
+                    <li>
+                        <p>Catagory</p>
+                    </li>
+                </ul>
+                <ul class="items">
+                    <li class="itemContainer">
+                        <div class="overlay">
+                            <h3>Item</h3>
+                            <p>Look</p>
+                        </div>
+                        <img src="https://placekitten.com/100/100" alt="">
+                    </li>
+                    <li class="itemContainer">
+                        <div class="overlay">
+                            <h3>Item</h3>
+                            <p>Look</p>
+                        </div>
+                        <img src="https://placekitten.com/100/100" alt="">
+                    </li>
+                    <li class="itemContainer">
+                        <div class="overlay">
+                            <h3>Item</h3>
+                            <p>Look</p>
+                        </div>
+                        <img src="https://placekitten.com/100/100" alt="">
+                    </li>
+                    <li class="itemContainer">
+                        <div class="overlay">
+                            <h3>Item</h3>
+                            <p>Look</p>
+                        </div>
+                        <img src="https://placekitten.com/100/100" alt="">
+                    </li>
+                    <li class="itemContainer">
+                        <div class="overlay">
+                            <h3>Item</h3>
+                            <p>Look</p>
+                        </div>
+                        <img src="https://placekitten.com/100/100" alt="">
+                    </li>
+                    <li class="itemContainer">
+                        <div class="overlay">
+                            <h3>Item</h3>
+                            <p>Look</p>
+                        </div>
+                        <img src="https://placekitten.com/100/100" alt="">
+                    </li>
+                </ul>
+                <a href="#" class="button">View more</a>
+            </div>
+        </section>
+        <section class="testimonials">
+            <div class="wrapper">
+                <h2>Testimonials</h2>
+                <div class="fancyLine"></div>
+                <div class="profilePhoto">
+                    <img src="https://placekitten.com/100/100" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aliquid eum fugiat facere cum, neque hic rem error omnis deleniti, quisquam aut fugit eligendi magnam consequatur, praesentium quis et id!</p>
+                <p>. . .</p>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="wrapper">
+                <h2>Get in touch</h2>
+                <div class="fancyLine"></div>
+                <div class="flexContainer">
+                    <ul class="contact">
+                        <li>
+                            <h3>See me</h3>
+                            <p>sdfgjdsfh
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Call me</h3>
+                            <p>34534563456</p>
+                        </li>
+                        <li>
+                            <h3>Write me</h3>
+                            <p>kgkjh@kghgk.dfg</p>
+                        </li>
+                    </ul>
+                    <form action="#">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="name">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10">Message...</textarea>
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <h2>Lauren</h2>
-        <div class="socialLinks">
-            t f i g l
+        <div class="wrapper">
+            <h2>Lauren</h2>
+            <div class="socialLinks">
+                t f i g l
+            </div>
+            <p>2019. All Rights Reserved.</p>
         </div>
-        <p>2019. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
