Header looks pretty alright

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <div class="wrapper">
-            <nav>
+        <nav>
+            <div class="wrapper">
                 <h2>
                     Lauren
                 </h2>
@@ -24,12 +24,14 @@
                     <li><a href="#">Testimonials</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </nav>
+            </div>
+        </nav>
+        <div class="wrapper">
             <div class="headerContent">
                 <p>Hello!</p>
                 <h1>I am Lauren Hetherington</h1>
-                <h2>Front-end Web Developer</h2>
-                <a href="#" class="button">Download Resume</a>
+                <h2>Front-end web developer</h2>
+                <a href="#" class="button">Download resume</a>
             </div>
         </div>
     </header>
