Skills section sorta

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lauren Hetherington</title>
 
+    <script src="https://kit.fontawesome.com/5ca295eb00.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Pacifico|Raleway:500,700|Satisfy|Titillium+Web:400,400i&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -41,36 +42,63 @@
                 <h2>About me</h2>
                 <div class="fancyLine"></div>
                 <div class="profilePhoto">
-                    <img src="https://placekitten.com/100/100" alt="">
+                    <img src="https://placekitten.com/200/200" alt="">
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptatum libero rem doloribus, voluptas ratione velit molestiae voluptatem, beatae neque vitae architecto blanditiis maxime. Voluptatum minus iste debitis ducimus omnis.</p>
                 <div class="socialLinks">
-                    t f i g l
+                    <a href="#">
+                        <i class="fab fa-twitter-square"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-github-square"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
         </section>
         <section class="skills">
             <div class="wrapper">
+                <h2>Skills</h2>
+                <div class="fancyLine"></div>
                 <ul>
                     <li>
-                        <div>i</div>
-                        <p>Amazing Websites</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <i class="devicon-html5-plain"></i>
                     </li>
                     <li>
-                        <div>i</div>
-                        <p>Quality Websites</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                        <i class="devicon-css3-plain"></i>
                     </li>
                     <li>
-                        <div>i</div>
-                        <p>Creative Websites</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <i class="devicon-javascript-plain"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-react-original"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-sass-original"></i>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <i class="devicon-jquery-plain"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-git-plain"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-github-plain"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-visualstudio-plain"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-python-plain"></i>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="portfolio">
+        <!-- <section class="portfolio">
             <div class="wrapper">
                 <h2>Portfolio</h2>
                 <div class="fancyLine"></div>
@@ -94,58 +122,58 @@
                             <h3>Item</h3>
                             <p>Look</p>
                         </div>
-                        <img src="https://placekitten.com/100/100" alt="">
+                        <img src="https://placekitten.com/200/200" alt="">
                     </li>
                     <li class="itemContainer">
                         <div class="overlay">
                             <h3>Item</h3>
                             <p>Look</p>
                         </div>
-                        <img src="https://placekitten.com/100/100" alt="">
+                        <img src="https://placekitten.com/200/200" alt="">
                     </li>
                     <li class="itemContainer">
                         <div class="overlay">
                             <h3>Item</h3>
                             <p>Look</p>
                         </div>
-                        <img src="https://placekitten.com/100/100" alt="">
+                        <img src="https://placekitten.com/200/200" alt="">
                     </li>
                     <li class="itemContainer">
                         <div class="overlay">
                             <h3>Item</h3>
                             <p>Look</p>
                         </div>
-                        <img src="https://placekitten.com/100/100" alt="">
+                        <img src="https://placekitten.com/200/200" alt="">
                     </li>
                     <li class="itemContainer">
                         <div class="overlay">
                             <h3>Item</h3>
                             <p>Look</p>
                         </div>
-                        <img src="https://placekitten.com/100/100" alt="">
+                        <img src="https://placekitten.com/200/200" alt="">
                     </li>
                     <li class="itemContainer">
                         <div class="overlay">
                             <h3>Item</h3>
                             <p>Look</p>
                         </div>
-                        <img src="https://placekitten.com/100/100" alt="">
+                        <img src="https://placekitten.com/200/200" alt="">
                     </li>
                 </ul>
                 <a href="#" class="button">View more</a>
             </div>
-        </section>
-        <section class="testimonials">
+        </section> -->
+        <!-- <section class="testimonials">
             <div class="wrapper">
                 <h2>Testimonials</h2>
                 <div class="fancyLine"></div>
                 <div class="profilePhoto">
-                    <img src="https://placekitten.com/100/100" alt="">
+                    <img src="https://placekitten.com/200/200" alt="">
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aliquid eum fugiat facere cum, neque hic rem error omnis deleniti, quisquam aut fugit eligendi magnam consequatur, praesentium quis et id!</p>
                 <p>. . .</p>
             </div>
-        </section>
+        </section> -->
         <section class="contact">
             <div class="wrapper">
                 <h2>Get in touch</h2>
