--- a/index.html
+++ b/index.html
@@ -177,31 +177,45 @@
         <section class="contact">
             <div class="wrapper">
                 <h2>Get in touch</h2>
-                <div class="fancyLine"></div>
+                <div class="fancyLine greenLine"></div>
                 <div class="flexContainer">
-                    <ul class="contact">
+                    <ul class="contactInfo">
                         <li>
-                            <h3>See me</h3>
-                            <p>sdfgjdsfh
-                            </p>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div>
+                                <h3>See me</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, nisi.
+                                </p>
+                            </div>
                         </li>
                         <li>
-                            <h3>Call me</h3>
-                            <p>34534563456</p>
+                            <i class="fas fa-phone-alt"></i>
+                            <div>
+                                <h3>Call me</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, beatae!
+                                </p>
+                            </div>
                         </li>
                         <li>
-                            <h3>Write me</h3>
-                            <p>kgkjh@kghgk.dfg</p>
+                            <i class="far fa-envelope"></i>
+                            <div>
+                                <h3>Write me</h3>
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, sequi!
+                                </p>
+                            </div>
                         </li>
                     </ul>
                     <form action="#">
-                        <label for="name">Name</label>
-                        <input type="text" name="name" id="name">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
-                        <label for="message">Message</label>
+                        <label class="visuallyHidden" for="name">Name</label>
+                        <input type="text" name="name" id="name" placeholder="Name">
+                        <label class="visuallyHidden"  for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="E-mail">
+                        <label class="visuallyHidden"  for="message">Message</label>
                         <textarea name="message" id="message" cols="30" rows="10">Message...</textarea>
-                        <button type="submit">Send</button>
+                        <button class="button" type="submit">Send</button>
                     </form>
                 </div>
             </div>
