Footer kinda okay

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <label class="visuallyHidden"  for="email">Email</label>
                         <input type="email" name="email" id="email" placeholder="E-mail">
                         <label class="visuallyHidden"  for="message">Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10">Message...</textarea>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Message..."></textarea>
                         <button class="button" type="submit">Send</button>
                     </form>
                 </div>
@@ -225,7 +225,15 @@
         <div class="wrapper">
             <h2>Lauren</h2>
             <div class="socialLinks">
-                t f i g l
+                <a href="#">
+                    <i class="fab fa-twitter-square"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-github-square"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-linkedin"></i>
+                </a>
             </div>
             <p>2019. All Rights Reserved.</p>
         </div>
