Portfolio section grid styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Testimonials</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
@@ -42,7 +41,7 @@
                 <h2>About me</h2>
                 <div class="fancyLine"></div>
                 <div class="profilePhoto">
-                    <img src="https://placekitten.com/200/200" alt="">
+                    <img src="assets/cropped-photo.jpg" alt="It's me, Lauren! I'm smiling and wearing a purple shirt.">
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptatum libero rem doloribus, voluptas ratione velit molestiae voluptatem, beatae neque vitae architecto blanditiis maxime. Voluptatum minus iste debitis ducimus omnis.</p>
                 <div class="socialLinks">
@@ -98,82 +97,54 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="portfolio">
+        <section class="portfolio">
             <div class="wrapper">
                 <h2>Portfolio</h2>
                 <div class="fancyLine"></div>
-                <ul>
-                    <li>
-                        <p>All</p>
-                    </li>
-                    <li>
-                        <p>Catagory</p>
-                    </li>
-                    <li>
-                        <p>Catagory</p>
-                    </li>
-                    <li>
-                        <p>Catagory</p>
-                    </li>
-                </ul>
-                <ul class="items">
-                    <li class="itemContainer">
+                <div class="grid">
+                    <div class="itemContainer">
+                        <img src="assets/questionableQuestions.png" alt="">
                         <div class="overlay">
-                            <h3>Item</h3>
-                            <p>Look</p>
+                            <h3>Questionable Questions</h3>
+                            <p>A React.js app for asking questions, giving answers, and then voting for the best ones! It was built using firebase to keep track of all of the submissions made so far.</p>
+                            <p>
+                                <a href="https://laurheth.github.io/laurenHetheringtonProjectFive/" class="button">View live</a>
+                            </p>
                         </div>
-                        <img src="https://placekitten.com/200/200" alt="">
-                    </li>
-                    <li class="itemContainer">
+                    </div>
+                    <div class="itemContainer">
+                        <img src="assets/theKittensOubliette.png" alt="">
                         <div class="overlay">
-                            <h3>Item</h3>
-                            <p>Look</p>
+                            <h3>The Kitten's Oubliette</h3>
+                            <p>A jQuery text adventure in which you must escape from a dungeon. But first, you must feed the cat!</p>
+                            <p>
+                                <a href="http://laurenhetherington.com/kittenOubliette/" class="button">View live</a>
+                            </p>
                         </div>
-                        <img src="https://placekitten.com/200/200" alt="">
-                    </li>
-                    <li class="itemContainer">
+                    </div>
+                    <div class="itemContainer">
+                        <img src="assets/adoptACat.png" alt="">
                         <div class="overlay">
-                            <h3>Item</h3>
-                            <p>Look</p>
+                            <h3>Adopt A Cat</h3>
+                            <p>A cat adoption app built using the RescueGroups API! Built as part of a pair-programming project.</p>
+                            <p>
+                                <a href="http://adoptacat.jasminecarbone.tech/" class="button">View live</a>
+                            </p>
                         </div>
-                        <img src="https://placekitten.com/200/200" alt="">
-                    </li>
-                    <li class="itemContainer">
+                    </div>
+                    <div class="itemContainer">
+                        <img src="assets/dineAndDash.png" alt="">
                         <div class="overlay">
-                            <h3>Item</h3>
-                            <p>Look</p>
+                            <h3>Dine and Dash</h3>
+                            <p>A React.js project built on a team of four, using multiple APIs and combining their responses! You give it the location where you would like to eat. Once you have found a restaurant via the Yelp API, it also shows you the nearest City Bike location, so you can Dine and Dash with maximum convenience!</p>
+                            <p>
+                                <a href="https://dineanddashjuno.github.io/projectSix/" class="button">View live</a>
+                            </p>
                         </div>
-                        <img src="https://placekitten.com/200/200" alt="">
-                    </li>
-                    <li class="itemContainer">
-                        <div class="overlay">
-                            <h3>Item</h3>
-                            <p>Look</p>
-                        </div>
-                        <img src="https://placekitten.com/200/200" alt="">
-                    </li>
-                    <li class="itemContainer">
-                        <div class="overlay">
-                            <h3>Item</h3>
-                            <p>Look</p>
-                        </div>
-                        <img src="https://placekitten.com/200/200" alt="">
-                    </li>
-                </ul>
-                <a href="#" class="button">View more</a>
-            </div>
-        </section> -->
-        <!-- <section class="testimonials">
-            <div class="wrapper">
-                <h2>Testimonials</h2>
-                <div class="fancyLine"></div>
-                <div class="profilePhoto">
-                    <img src="https://placekitten.com/200/200" alt="">
+                    </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aliquid eum fugiat facere cum, neque hic rem error omnis deleniti, quisquam aut fugit eligendi magnam consequatur, praesentium quis et id!</p>
-                <p>. . .</p>
             </div>
-        </section> -->
+        </section>
         <section class="contact">
             <div class="wrapper">
                 <h2>Get in touch</h2>
