--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a href="#" class="button">Download resume</a>
             </div>
         </div>
+        <div class="background"></div>
     </header>
     <main>
         <section class="about">
@@ -190,6 +191,7 @@
                     </form>
                 </div>
             </div>
+            <div class="background"></div>
         </section>
     </main>
     <footer>
