--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <link rel="manifest" href="assets/site.webmanifest">
 </head>
 <body>
-    <header>
+    <header id="home">
         <nav>
             <div class="wrapper">
                 <h2>
                     Lauren
                 </h2>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -42,7 +42,7 @@
         <div class="background"></div>
     </header>
     <main>
-        <section class="about">
+        <section class="about" id="about">
             <div class="wrapper">
                 <h2>About me</h2>
                 <div class="fancyLine"></div>
@@ -103,7 +103,7 @@
                 </ul>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="wrapper">
                 <h2>Portfolio</h2>
                 <div class="fancyLine"></div>
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="wrapper">
                 <h2>Get in touch</h2>
                 <div class="fancyLine greenLine"></div>
