Formspree added and also some text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 <div class="profilePhoto">
                     <img src="assets/cropped-photo.jpg" alt="It's me, Lauren! I'm smiling and wearing a purple shirt.">
                 </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis voluptatum libero rem doloribus, voluptas ratione velit molestiae voluptatem, beatae neque vitae architecto blanditiis maxime. Voluptatum minus iste debitis ducimus omnis.</p>
+                <p>
+                    Hi there, I'm Lauren! I'm a front-end web developer based in Toronto, recently graduated from the Juno College of Technology. Before that, I come from an Astronomy and Astrophysics background. I'm passionate about learning new technologies, writing robust code, and strong collaboration!
+                </p>
                 <div class="socialLinks">
                     <a href="#">
                         <i class="fab fa-twitter-square"></i>
@@ -112,7 +114,7 @@
                         <img src="assets/questionableQuestions.png" alt="">
                         <div class="overlay">
                             <h3>Questionable Questions</h3>
-                            <p>A React.js app for asking questions, giving answers, and then voting for the best ones! It was built using firebase to keep track of all of the submissions made so far.</p>
+                            <p>A React.js app, built on firebase, for asking questions, giving answers, and then voting for the best ones!</p>
                             <p>
                                 <a href="https://laurheth.github.io/laurenHetheringtonProjectFive/" class="button">View live</a>
                             </p>
@@ -132,7 +134,7 @@
                         <img src="assets/adoptACat.png" alt="">
                         <div class="overlay">
                             <h3>Adopt A Cat</h3>
-                            <p>A cat adoption app built using the RescueGroups API! Built as part of a pair-programming project.</p>
+                            <p>A cat adoption app built using the RescueGroups API! Built as a pair-programming project.</p>
                             <p>
                                 <a href="http://adoptacat.jasminecarbone.tech/" class="button">View live</a>
                             </p>
@@ -142,7 +144,7 @@
                         <img src="assets/dineAndDash.png" alt="">
                         <div class="overlay">
                             <h3>Dine and Dash</h3>
-                            <p>A React.js project built on a team of four, using multiple APIs and combining their responses! You give it the location where you would like to eat. Once you have found a restaurant via the Yelp API, it also shows you the nearest City Bike location, so you can Dine and Dash with maximum convenience!</p>
+                            <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, in helps find the nearest City Bike station for a swift escape!</p>
                             <p>
                                 <a href="https://dineanddashjuno.github.io/projectSix/" class="button">View live</a>
                             </p>
@@ -185,14 +187,14 @@
                             </div>
                         </li>
                     </ul>
-                    <form action="#">
+                    <form action="https://formspree.io/mvozpoyk" method="POST">
                         <label class="visuallyHidden" for="name">Name</label>
                         <input type="text" name="name" id="name" placeholder="Name">
                         <label class="visuallyHidden"  for="email">Email</label>
-                        <input type="email" name="email" id="email" placeholder="E-mail">
+                        <input type="email" name="_replyto" id="email" placeholder="E-mail">
                         <label class="visuallyHidden"  for="message">Message</label>
                         <textarea name="message" id="message" cols="30" rows="10" placeholder="Message..."></textarea>
-                        <button class="button" type="submit">Send</button>
+                        <button class="button" type="submit" value="Send">Send</button>
                     </form>
                 </div>
             </div>
