Social links and some styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Hello!</p>
                 <h1>I am Lauren Hetherington</h1>
                 <h2>Front-end web developer</h2>
-                <a href="#" class="button">Download resume</a>
+                <!-- <a href="#" class="button">Download resume</a> -->
             </div>
         </div>
         <div class="background"></div>
@@ -53,13 +53,13 @@
                     Hi there, I'm Lauren! I'm a front-end web developer based in Toronto, recently graduated from the Juno College of Technology. Before that, I come from an Astronomy and Astrophysics background. I'm passionate about learning new technologies, writing robust code, and strong collaboration!
                 </p>
                 <div class="socialLinks">
-                    <a href="#">
+                    <a href="https://twitter.com/laurheth">
                         <i class="fab fa-twitter-square"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://github.com/laurheth">
                         <i class="fab fa-github-square"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/lauren-hetherington-57b54569/">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
@@ -164,11 +164,11 @@
                             <div>
                                 <h3>See me</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, nisi.
+                                    I'm based in Toronto. If you would like to meet for coffee, send me a message!
                                 </p>
                             </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <i class="fas fa-phone-alt"></i>
                             <div>
                                 <h3>Call me</h3>
@@ -176,13 +176,13 @@
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, beatae!
                                 </p>
                             </div>
-                        </li>
+                        </li> -->
                         <li>
                             <i class="far fa-envelope"></i>
                             <div>
                                 <h3>Write me</h3>
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, sequi!
+                                    You can reach my by e-mail on this form. I look forward to hearing from you!
                                 </p>
                             </div>
                         </li>
@@ -203,15 +203,17 @@
     </main>
     <footer>
         <div class="wrapper">
-            <h2>Lauren</h2>
+            <a href="#home">
+                <h2>Lauren</h2>
+            </a>
             <div class="socialLinks">
-                <a href="#">
+                <a href="https://twitter.com/laurheth">
                     <i class="fab fa-twitter-square"></i>
                 </a>
-                <a href="#">
+                <a href="https://github.com/laurheth">
                     <i class="fab fa-github-square"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/lauren-hetherington-57b54569/">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
