Adjusted image sizes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="itemContainer">
-                        <img src="assets/adoptACat.png" alt="">
+                        <img src="assets/adoptACat.jpg" alt="">
                         <div class="overlay">
                             <h3>Adopt A Cat</h3>
                             <p>A cat adoption app built using the RescueGroups API! Built as a pair-programming project.</p>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="itemContainer">
-                        <img src="assets/dineAndDash.png" alt="">
+                        <img src="assets/dineAndDash.jpg" alt="">
                         <div class="overlay">
                             <h3>Dine and Dash</h3>
                             <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, in helps find the nearest City Bike station for a swift escape!</p>
