--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="itemContainer">
-                        <img src="assets/theKittensOubliette.png" alt="">
+                        <img src="assets/theKittensOubliette.jpg" alt="">
                         <div class="overlay">
                             <h3>The Kitten's Oubliette</h3>
                             <p>A jQuery text adventure in which you must escape from a dungeon. But first, you must feed the cat!</p>
