Alt text for social icons.

--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
                 </p>
                 <div class="socialLinks">
                     <a href="https://twitter.com/laurheth">
-                        <i class="fab fa-twitter-square"></i>
+                        <i aria-hidden="true" class="fab fa-twitter-square"></i>
+                        <span class="visuallyHidden">Go to Lauren's twitter.</span>
                     </a>
                     <a href="https://github.com/laurheth">
-                        <i class="fab fa-github-square"></i>
+                        <i aria-hidden="true" class="fab fa-github-square"></i>
+                        <span class="visuallyHidden">Go to Lauren's github.</span>
                     </a>
                     <a href="https://www.linkedin.com/in/lauren-hetherington-57b54569/">
-                        <i class="fab fa-linkedin"></i>
+                        <i aria-hidden="true" class="fab fa-linkedin"></i>
+                        <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
                     </a>
                 </div>
             </div>
@@ -126,7 +129,7 @@
                             <h3>The Kitten's Oubliette</h3>
                             <p>A jQuery text adventure in which you must escape from a dungeon. But first, you must feed the cat!</p>
                             <p>
-                                <a href="http://laurenhetherington.com/kittenOubliette/" class="button">View live</a>
+                                <a href="http://kittenoubliette.laurenhetherington.com/" class="button">View live</a>
                             </p>
                         </div>
                     </div>
@@ -208,13 +211,16 @@
             </a>
             <div class="socialLinks">
                 <a href="https://twitter.com/laurheth">
-                    <i class="fab fa-twitter-square"></i>
+                    <i aria-hidden="true" class="fab fa-twitter-square"></i>
+                    <span class="visuallyHidden">Go to Lauren's twitter.</span>
                 </a>
                 <a href="https://github.com/laurheth">
-                    <i class="fab fa-github-square"></i>
+                    <i aria-hidden="true" class="fab fa-github-square"></i>
+                    <span class="visuallyHidden">Go to Lauren's github.</span>
                 </a>
                 <a href="https://www.linkedin.com/in/lauren-hetherington-57b54569/">
-                    <i class="fab fa-linkedin"></i>
+                    <i aria-hidden="true" class="fab fa-linkedin"></i>
+                    <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
                 </a>
             </div>
             <p>2019. All Rights Reserved.</p>
