--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
                 <div class="fancyLine"></div>
                 <div class="grid">
                     <div class="itemContainer">
-                        <img src="assets/questionableQuestions.png" alt="">
+                        <div class="imgContainer">
+                            <img src="assets/questionableQuestions.png" alt="">
+                        </div>
                         <div class="overlay">
                             <h3>Questionable Questions</h3>
                             <p>A React.js app, built on firebase, for asking questions, giving answers, and then voting for the best ones!</p>
@@ -124,7 +126,9 @@
                         </div>
                     </div>
                     <div class="itemContainer">
-                        <img src="assets/theKittensOubliette.jpg" alt="">
+                        <div class="imgContainer">
+                            <img src="assets/theKittensOubliette.jpg" alt="">
+                        </div>
                         <div class="overlay">
                             <h3>The Kitten's Oubliette</h3>
                             <p>A jQuery text adventure in which you must escape from a dungeon. But first, you must feed the cat!</p>
@@ -134,17 +138,21 @@
                         </div>
                     </div>
                     <div class="itemContainer">
-                        <img src="assets/adoptACat.jpg" alt="">
+                        <div class="imgContainer">
+                            <img src="assets/adoptACat.jpg" alt="">
+                        </div>
                         <div class="overlay">
                             <h3>Adopt A Cat</h3>
                             <p>A cat adoption app built using the RescueGroups API! Built as a pair-programming project.</p>
                             <p>
-                                <a href="http://adoptacat.jasminecarbone.tech/" class="button">View live</a>
+                                <a href="http://adoptacat.laurenhetherington.com/" class="button">View live</a>
                             </p>
                         </div>
                     </div>
                     <div class="itemContainer">
-                        <img src="assets/dineAndDash.jpg" alt="">
+                        <div class="imgContainer">
+                            <img src="assets/dineAndDash.jpg" alt="">
+                        </div>
                         <div class="overlay">
                             <h3>Dine and Dash</h3>
                             <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, in helps find the nearest City Bike station for a swift escape!</p>
