--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <h3>Questionable Questions</h3>
                             <p>A React.js app, built on firebase, for asking questions, giving answers, and then voting for the best ones!</p>
                             <p>
-                                <a href="https://laurheth.github.io/laurenHetheringtonProjectFive/" class="button">View live</a>
+                                <a href="http://questions.laurenhetherington.com/" class="button">View live</a>
                             </p>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             <h3>Dine and Dash</h3>
                             <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, in helps find the nearest City Bike station for a swift escape!</p>
                             <p>
-                                <a href="https://dineanddashjuno.github.io/projectSix/" class="button">View live</a>
+                                <a href="http://dineanddash.laurenhetherington.com" class="button">View live</a>
                             </p>
                         </div>
                     </div>
