Added some github code links

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                             <p>A React.js app, built on firebase, for asking questions, giving answers, and then voting for the best ones!</p>
                             <p>
                                 <a href="http://questions.laurenhetherington.com/" class="button">View live</a>
+                                <a href="https://github.com/laurheth/laurenHetheringtonProjectFive" class="button">View code</a>
                             </p>
+
                         </div>
                     </div>
                     <div class="itemContainer">
@@ -134,6 +136,7 @@
                             <p>A jQuery text adventure in which you must escape from a dungeon. But first, you must feed the cat!</p>
                             <p>
                                 <a href="http://kittenoubliette.laurenhetherington.com/" class="button">View live</a>
+                                <a href="https://github.com/laurheth/laurenHetheringtonProjectThree" class="button">View code</a>
                             </p>
                         </div>
                     </div>
@@ -146,6 +149,7 @@
                             <p>A cat adoption app built using the RescueGroups API! Built as a pair-programming project.</p>
                             <p>
                                 <a href="http://adoptacat.laurenhetherington.com/" class="button">View live</a>
+                                <a href="https://github.com/projectFourJasmineLaurenCats/adoptACat" class="button">View code</a>
                             </p>
                         </div>
                     </div>
@@ -158,6 +162,7 @@
                             <p>A React.js project built on a team of four, using multiple APIs and combining their responses! Given a restaurant, found via the Yelp API, in helps find the nearest City Bike station for a swift escape!</p>
                             <p>
                                 <a href="http://dineanddash.laurenhetherington.com" class="button">View live</a>
+                                <a href="https://github.com/dineAndDashJuno/projectSix" class="button">View code</a>
                             </p>
                         </div>
                     </div>
