--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
                 </a>
             </div>
-            <p>2019. All Rights Reserved.</p>
+            <p>2019. All Rights Reserved. Hero photo by Colin Maynard on Unsplash.</p>
         </div>
     </footer>
 </body>
