Implementing a bunch of updates

--- a/index.html
+++ b/index.html
@@ -74,36 +74,66 @@
                 <div class="fancyLine"></div>
                 <ul>
                     <li>
-                        <i class="devicon-html5-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-html5-plain"></i>
+                        </div>
+                        <p>HTML5</p>
                     </li>
                     <li>
-                        <i class="devicon-css3-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-css3-plain"></i>
+                        </div>
+                        <p>CSS3</p>
                     </li>
                     <li>
-                        <i class="devicon-javascript-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-javascript-plain"></i>
+                        </div>
+                        <p>JavaScript</p>
                     </li>
                     <li>
-                        <i class="devicon-react-original"></i>
+                        <div class="iconBox">
+                            <i class="devicon-react-original"></i>
+                        </div>
+                        <p>React.js</p>
                     </li>
                     <li>
-                        <i class="devicon-sass-original"></i>
+                        <div class="iconBox">
+                            <i class="devicon-sass-original"></i>
+                        </div>
+                        <p>Sass</p>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <i class="devicon-jquery-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-jquery-plain"></i>
+                        </div>
+                        <p>jQuery</p>
                     </li>
                     <li>
-                        <i class="devicon-git-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <p>git</p>
                     </li>
                     <li>
-                        <i class="devicon-github-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-github-plain"></i>
+                        </div>
+                        <p>github</p>
                     </li>
                     <li>
-                        <i class="devicon-visualstudio-plain"></i>
+                        <div class="iconBox">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <p>Responsive Design</p>
                     </li>
                     <li>
-                        <i class="devicon-python-plain"></i>
+                        <div class="iconBox">
+                            <i class="devicon-python-plain"></i>
+                        </div>
+                        <p>Python</p>
                     </li>
                 </ul>
             </div>
