Reorganized about section

--- a/index.html
+++ b/index.html
@@ -46,25 +46,29 @@
             <div class="wrapper">
                 <h2>About me</h2>
                 <div class="fancyLine"></div>
-                <div class="profilePhoto">
-                    <img src="assets/cropped-photo.jpg" alt="It's me, Lauren! I'm smiling and wearing a purple shirt.">
-                </div>
-                <p>
-                    Hi there, I'm Lauren! I'm a front-end web developer based in Toronto, recently graduated from the Juno College of Technology. Before that, I come from an Astronomy and Astrophysics background. I'm passionate about learning new technologies, writing robust code, and strong collaboration!
-                </p>
-                <div class="socialLinks">
-                    <a href="https://twitter.com/laurheth">
-                        <i aria-hidden="true" class="fab fa-twitter-square"></i>
-                        <span class="visuallyHidden">Go to Lauren's twitter.</span>
-                    </a>
-                    <a href="https://github.com/laurheth">
-                        <i aria-hidden="true" class="fab fa-github-square"></i>
-                        <span class="visuallyHidden">Go to Lauren's github.</span>
-                    </a>
-                    <a href="https://www.linkedin.com/in/lauren-hetherington-57b54569/">
-                        <i aria-hidden="true" class="fab fa-linkedin"></i>
-                        <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
-                    </a>
+                <div class="flexRow">
+                    <div class="profilePhoto">
+                        <img src="assets/cropped-photo.jpg" alt="It's me, Lauren! I'm smiling and wearing a purple shirt.">
+                    </div>
+                    <div class="column">
+                        <p>
+                            Hi there, I'm Lauren! I'm a front-end web developer based in Toronto, recently graduated from the Juno College of Technology. Before that, I come from an Astronomy and Astrophysics background. I'm passionate about learning new technologies, writing robust code, and strong collaboration!
+                        </p>
+                        <div class="socialLinks">
+                            <a href="https://twitter.com/laurheth">
+                                <i aria-hidden="true" class="fab fa-twitter-square"></i>
+                                <span class="visuallyHidden">Go to Lauren's twitter.</span>
+                            </a>
+                            <a href="https://github.com/laurheth">
+                                <i aria-hidden="true" class="fab fa-github-square"></i>
+                                <span class="visuallyHidden">Go to Lauren's github.</span>
+                            </a>
+                            <a href="https://www.linkedin.com/in/lauren-hetherington-57b54569/">
+                                <i aria-hidden="true" class="fab fa-linkedin"></i>
+                                <span class="visuallyHidden">Go to Lauren's LinkedIn.</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
